--- a/tazapp/src/main/res/layout/start_settings.xml
+++ b/tazapp/src/main/res/layout/start_settings.xml
@@ -302,7 +302,7 @@
             <CheckBox
                     style="@style/SettingsCheckbox"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="wrap_content"/>
 
         </LinearLayout>
     </ScrollView>
